[metadata]
name = ndc
version = 1.0
url = https://github.com/famura/ndc
author = Fabio Muratore
author_email = robot-learning@famura.net
classifiers = 
	Development Status :: 4 - Beta
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3 :: Only
description = Numerical differentiation leveraging convolutions
keywords = numerical differentiation, finite differences, convolution, signal processing, pytorch

[options]
zip_safe = True
packages = find:
python_requires = >=3.6, <4
install_requires = 
	torch

[options.extras_require]
dev = black; isort; matplotlib; pytest; pytest-cov
